contrast fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ p {
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   margin-right: 0;
 }
 
